fixed some spacing issues

--- a/css/main.css
+++ b/css/main.css
@@ -17,13 +17,15 @@ html {
   box-sizing: inherit;
 }
 
-img {
-  width: 100%;
+body {
   text-align: center;
-  padding: 0;
 }
 
-img:nth-child(3) {
+img {
+  width: 100%;
+}
+
+img:nth-child(2) {
   display: none;
 }
 
@@ -38,7 +40,7 @@ img:nth-child(4n) {
     width: 49%;
   }
 
-  img:nth-child(3) {
+  img:nth-child(2) {
     display: inline-block;
   }
 
@@ -55,8 +57,16 @@ img:nth-child(4n) {
     width: 32%;
   }
 
-  img:nth-child(4) {
+  img:nth-child(1) {
     display: none;
+  }
+
+  img:nth-child(2) {
+    display: inline-block;
+  }
+
+  img:nth-child(4) {
+    display: inline-block;
   }
 
 }
@@ -67,7 +77,7 @@ img:nth-child(4n) {
     width: 24%;
   }
 
-  img:nth-child(4) {
+  img:nth-child(1) {
     display: inline-block;
   }
 
